# personal-finance

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  TODO.md  pyproject.toml  setup.sh
.claude/: settings.json
.claude/skills/commit/: SKILL.md
.claude/skills/new-feature/: SKILL.md
.claude/skills/run-checks/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml
config/: README.md
config/examples/: budgets.yaml  merchants.yaml  places.yaml  rules.yaml  sources.yaml  taxonomy.yaml
docs/: ARCHITECTURE.md  FEATURES.md  PLAN.md  source-schemas.md
infra/terraform/: main.tf  outputs.tf  variables.tf
src/personal_finance/: __init__.py  cli.py  config.py  ddl.py  embed.py  exceptions.py  llm_categorize.py  merchant_merge.py  models.py  review.py  seed.py  user_config.py
src/personal_finance/ingest/: __init__.py  csv_source.py  dedup.py  ofx_source.py  pipeline.py  watch.py
src/personal_finance/synth/: __init__.py  receipts.py  scenario.py  writers.py
tests/: conftest.py  test_cli.py  test_config.py  test_dbt.py  test_ddl.py  test_embed.py  test_ingest_csv.py  test_ingest_dedup.py  test_ingest_ofx.py  test_ingest_watch.py  test_llm_categorize.py  test_merchant_merge.py  test_models.py  test_review.py  test_seed.py  test_synth.py  test_synth_receipts.py  test_user_config.py
transform/: dbt_project.yml  profiles.yml
transform/macros/: first_match_wins.sql  normalize_merchant.sql
transform/models/gold/: gold_category_ancestors.sql  gold_category_paths.sql  gold_category_rollups.sql  schema.yml
transform/models/silver/: schema.yml  silver_categories.sql  silver_merchants.sql  silver_transaction_categories.sql  silver_transaction_categories_all.sql  silver_transaction_categories_embedding.sql  silver_transaction_categories_human.sql  silver_transaction_categories_llm.sql  silver_transactions.sql  silver_transfers.sql  sources.yml  stg_transactions.sql
transform/tests/: assert_embedding_confidence_in_range.sql  assert_llm_confidence_in_range.sql  assert_merchant_normalization.sql  assert_no_self_referencing_category.sql  assert_root_rollup_matches_total_categorized.sql
